build: OSSRH deploy changes